# pangeo-forge-azure-bakery

./: .gitignore  Makefile  README.md  build_and_push_image.sh  example.env  example.tfvars.json  job_template.yaml  prefect_agent_conf.yaml  pyproject.toml  setup_remote_state.sh
.github/workflows/: ci.yml  shellcheck.yaml  terraform-linter.yaml
flow_test/: dask_memory_flow.py  manual_flow.py  new_recipe.py  oisst_recipe.py  transform_flow.py
flow_test/transform_tasks/: xarray.py  zarr.py
images/: Dockerfile  requirements.txt
kubernetes/: prefect_agent_conf.yaml
scripts/: build_and_push_image.sh  check-prereqs.sh  destroy.sh  generate-yaml.sh  get-info.sh  init.sh  install.sh  k8s-connect.sh  lint.sh  loki.sh  replace_or_insert_value.py  retrieve_flow_storage_values.sh  setup_remote_state.sh  sp-setup.sh  test-flow.sh  test.sh
terraform/: .terraform.lock.hcl  cluster.tf  main.tf  outputs.tf  providers.tf  storage.tf  supporting.tf  tags.tf  variables.tf
test/: pyproject.toml
test/recipes/: oisst_recipe.py
