[tool.poetry]
name = "pangeo-forge-azure-bakery"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
prefect = {extras = ["azure", "kubernetes"], version = "^0.14.17"}
python-dotenv = "^0.17.0"
zarr = "2.7.0"
pangeo-forge-recipes = {git = "https://github.com/pangeo-forge/pangeo-forge.git"}
pandas = "^1.2.4"
adlfs = "^0.7.4"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
